--- a/resources/assets/sass/app.sass
+++ b/resources/assets/sass/app.sass
@@ -93,7 +93,7 @@ input, textarea
     width: 100%
     &:focus, &:active
       padding: 9px 24px
-      border: 2px solid #36b057
+      border: 2px solid #3a68a9
   &.error
     border: 1px solid red
 
@@ -219,8 +219,6 @@ input, textarea
         opacity: 0
       &.active
         opacity: 1
-
-//.icon-fade--rigth
 
 
 .youtube-video
