--- a/resources/assets/sass/partials/_main.sass
+++ b/resources/assets/sass/partials/_main.sass
@@ -679,4 +679,78 @@
     margin-top: 20px
     font-size: 16px
 
+//<!-- Main advice-->
+.main-advice
+  margin-bottom: 125px
+.main-advice__title
+  margin: 0 auto
+  margin-bottom: 60px
+  font-size: 24px
+  font-weight: 400
+  color: #5a6daa
+  & > span
+    color: #2c2c2c
+.main-advice__listing-link
+  display: block
+  margin: 0 auto
+  padding: 22px 75px
+  background-color: #3a69a8
+  color: #fff
+  font-family: "Open Sans", sans-serif
+  font-size: 18px
+  font-weight: 700
+  text-decoration: none
+  transition: all 0.3s
+
+  &:hover, &:focus, &:active
+    background-color: #2a4a74
+    opacity: 0.7
+
+.main-advice__articles
+  display: flex
+  flex-wrap: wrap
+  align-items: flex-start
+  margin-bottom: 100px
+
+.advice-articles__article
+  +col(12, no)
+
+.advice-article-preview
+  position: relative
+  color: #ffffff
+  text-shadow: 1px 1px rgba(0, 0, 0, .3)
+  &__link
+    display: block
+    width: 100%
+    overflow: hidden
+    &:hover, &:focus, &:active
+      opacity: 0.7
+  &__image
+    width: 100%
+    height: 320px
+    display: block
+
+
+  &__caption
+    position: absolute
+    top: 35px
+    left: 6.6%
+    width: 209px
+  &__title
+    font-size: 24px
+    font-weight: 400
+    margin-bottom: 26px
+  &__preview-text
+    margin-top: 20px
+    font-family: "Open Sans", sans-serif
+    font-size: 12px
+    font-weight: 400
+    margin-bottom: 26px
+  &__lnk
+    margin-top: 20px
+    font-family: "Open Sans", sans-serif
+    font-size: 12px
+    font-weight: 700
+    text-decoration: underline
+    color: #5a6daa
 
