--- a/resources/assets/sass/partials/_main.sass
+++ b/resources/assets/sass/partials/_main.sass
@@ -735,16 +735,18 @@
     position: absolute
     top: 35px
     left: 6.6%
-    width: 209px
+    width: 248px
   &__title
     font-size: 24px
     font-weight: 400
+    color: #454545
     margin-bottom: 26px
   &__preview-text
     margin-top: 20px
     font-family: "Open Sans", sans-serif
     font-size: 12px
     font-weight: 400
+    color: #454545
     margin-bottom: 26px
   &__lnk
     margin-top: 20px
