--- a/resources/assets/sass/partials/_listing.sass
+++ b/resources/assets/sass/partials/_listing.sass
@@ -213,12 +213,13 @@
 
   .goods-count
     & > span
+      font-family: "Open Sans", sans-serif
       font-size: 14px
       color: #999898
       margin-right: 20px
       +hidden-sm(down)
     & > i
-      font-size: 12px
+      font-size: 10px
       color: #303030
       text-align: center
       line-height: 22px
