--- a/resources/assets/sass/_buttons.sass
+++ b/resources/assets/sass/_buttons.sass
@@ -25,18 +25,31 @@ button
         opacity: 1
   &_w100p
     width: 100%
-  &_yellow
+  &_blue
     padding: 14px 0
-    background-color: #fcd82f
-    color: #000000
-    font-size: 14px
-    font-weight: 700
+    background-color: #4c68a5
+    color: #fff
+    font-size: 16px
+    font-weight: 400
     & > *
       vertical-align: middle
     & > i
       margin-left: 10px
-    &:hover
-      background-color: #fc942f
+    &:hover,&:focus
+      background-color: #1f2d4d
+      color: #ffffff
+  &_yellow
+    padding: 14px 0
+    background-color: #4c68a5
+    color: #fff
+    font-size: 16px
+    font-weight: 400
+    & > *
+      vertical-align: middle
+    & > i
+      margin-left: 10px
+    &:hover,&:focus
+      background-color: #1f2d4d
       color: #ffffff
   &_yellow-2
     padding: 14px 0
