--- a/resources/assets/sass/_sprite.scss
+++ b/resources/assets/sass/_sprite.scss
@@ -102,19 +102,19 @@
 .sprite-checkbox-pen-min {
   width: 31px;
   height: 31px;
-  background-position: -10px -98px;
+  background-position: -284px -51px;
 }
 
 .sprite-checked-symbol-min {
   width: 59px;
   height: 59px;
-  background-position: -61px -98px;
+  background-position: -10px -98px;
 }
 
 .sprite-comment-bubble-min {
   width: 36px;
   height: 32px;
-  background-position: -140px -98px;
+  background-position: -89px -98px;
 }
 
 .sprite-cross-blue-min {
@@ -126,179 +126,185 @@
 .sprite-cross-red-min {
   width: 10px;
   height: 10px;
-  background-position: -284px -51px;
+  background-position: -145px -102px;
 }
 
 .sprite-delivery-icon-min {
   width: 44px;
   height: 26px;
-  background-position: -196px -98px;
+  background-position: -175px -102px;
 }
 
 .sprite-favorite-heart-min {
   width: 27px;
   height: 25px;
-  background-position: -284px -81px;
+  background-position: -239px -102px;
 }
 
 .sprite-favorite-icon-min {
   width: 17px;
   height: 14px;
-  background-position: -260px -126px;
+  background-position: -286px -102px;
 }
 
 .sprite-home-icon-min {
   width: 18px;
   height: 16px;
-  background-position: -10px -160px;
+  background-position: -286px -136px;
 }
 
 .sprite-icon-eye-min {
   width: 22px;
   height: 11px;
-  background-position: -140px -160px;
+  background-position: -89px -172px;
 }
 
 .sprite-information-symbol-min {
   width: 9px;
   height: 31px;
-  background-position: -297px -126px;
+  background-position: -131px -172px;
 }
 
 .sprite-instagram-icon-min {
   width: 36px;
   height: 35px;
-  background-position: -48px -177px;
+  background-position: -160px -172px;
 }
 
 .sprite-laundry-min {
   width: 28px;
   height: 30px;
-  background-position: -182px -177px;
+  background-position: -216px -172px;
+}
+
+.sprite-listing__filter {
+  width: 19px;
+  height: 18px;
+  background-position: -264px -172px;
 }
 
 .sprite-locate-places-min {
   width: 18px;
   height: 26px;
-  background-position: -230px -177px;
+  background-position: -10px -210px;
 }
 
 .sprite-money-tool-min {
   width: 27px;
   height: 31px;
-  background-position: -268px -177px;
+  background-position: -48px -210px;
 }
 
 .sprite-outline-min {
   width: 51px;
   height: 22px;
-  background-position: -104px -223px;
+  background-position: -264px -210px;
 }
 
 .sprite-phone-icon-min {
   width: 13px;
   height: 13px;
-  background-position: -104px -177px;
+  background-position: -95px -210px;
 }
 
 .sprite-phone-icon-white-min {
   width: 25px;
   height: 25px;
-  background-position: -175px -228px;
+  background-position: -95px -252px;
 }
 
 .sprite-play-button-min {
   width: 66px;
   height: 66px;
-  background-position: -220px -228px;
+  background-position: -335px -10px;
 }
 
 .sprite-search-icon-min {
   width: 17px;
   height: 17px;
-  background-position: -10px -228px;
+  background-position: -335px -96px;
 }
 
 .sprite-star-blue-min {
   width: 16px;
   height: 16px;
-  background-position: -331px -10px;
+  background-position: -372px -96px;
 }
 
 .sprite-star-min {
   width: 26px;
   height: 26px;
-  background-position: -315px -177px;
+  background-position: -372px -132px;
 }
 
 .sprite-star-white-min {
   width: 16px;
   height: 16px;
-  background-position: -331px -46px;
+  background-position: -335px -178px;
 }
 
 .sprite-thermometer-min {
   width: 20px;
   height: 34px;
-  background-position: -315px -223px;
+  background-position: -371px -178px;
 }
 
 .sprite-thumbs-up-hand-symbol-min {
   width: 29px;
   height: 29px;
-  background-position: -10px -277px;
+  background-position: -140px -232px;
 }
 
 .sprite-tick-icon-blue-min {
   width: 21px;
   height: 19px;
-  background-position: -326px -126px;
+  background-position: -189px -232px;
 }
 
 .sprite-trigon-l-min {
   width: 10px;
   height: 13px;
-  background-position: -331px -82px;
+  background-position: -145px -132px;
 }
 
 .sprite-trigon-r-blue-min {
   width: 10px;
   height: 12px;
-  background-position: -59px -277px;
+  background-position: -10px -178px;
 }
 
 .sprite-trigon-r-min {
   width: 10px;
   height: 13px;
-  background-position: -89px -277px;
+  background-position: -230px -232px;
 }
 
 .sprite-trigon-white-min {
   width: 52px;
   height: 61px;
-  background-position: -367px -10px;
+  background-position: -335px -232px;
 }
 
 .sprite-twitter-icon-min {
   width: 34px;
   height: 34px;
-  background-position: -367px -91px;
+  background-position: -10px -313px;
 }
 
 .sprite-video-player-min {
   width: 29px;
   height: 23px;
-  background-position: -367px -145px;
+  background-position: -64px -313px;
 }
 
 .sprite-vk-icon-min {
   width: 33px;
   height: 33px;
-  background-position: -361px -188px;
+  background-position: -113px -313px;
 }
 
 .sprite-youtube-logo-min {
   width: 75px;
   height: 61px;
-  background-position: -119px -277px;
+  background-position: -166px -313px;
 }
