--- a/resources/assets/sass/app.sass
+++ b/resources/assets/sass/app.sass
@@ -34,7 +34,7 @@
   margin-left: 10px
 .sprite_main-header__enter, .sprite_main-header__city_point, .sprite_main-listing__filter_reset_red, .sprite_main-footer__phone
   margin-right: 10px
-.sprite-locate-places-min,.sprite-phone-icon-min,.sprite-burg-min
+.sprite-locate-places-min,.sprite-phone-icon-min,.sprite-cross-red-min
   margin-right: 10px
 .sprite-arrow-dwn-min,.sprite-arrow-down-blue-min
   margin-left: 10px
@@ -350,8 +350,9 @@ input, textarea
   margin-bottom: 24px
   margin-top: 35px
   width: 80%
-    width: 100%
   +media-xs(down)
+    width: 100%
+
 .total-list-1
   margin: 0
   padding: 0
