--- a/resources/assets/sass/partials/_sidebar.sass
+++ b/resources/assets/sass/partials/_sidebar.sass
@@ -1,6 +1,6 @@
 .sidebar
   width: 240px
-  margin-right: 48px
+  margin-right: 23px
   //background-color: rgba(100, 149, 237, 0.1)
   padding: 40px 0
   +hidden-md(down)
@@ -118,12 +118,12 @@
   margin-bottom: 40px
   &__title
     font-size: 16px
-    font-weight: 900
+    font-weight: 400
     text-transform: uppercase
     margin-bottom: 30px
   &__subtitle
     font-size: 16px
-    font-weight: 700
+    font-weight: 400
     padding-bottom: 20px
     &.collapsed
       display: flex
@@ -301,35 +301,25 @@
     display: flex
     align-items: center
     margin-bottom: 15px
-    font-size: 14px
+    font-family: "Open sans", sans-serif
+    font-size: 16px
+    color: #727272
   input
     display: none
     &:checked + .checkbox-filter__checkbox
-      border: 2px solid #fcd82f
+      background-color: #4c68a5
       line-height: 19px
-      &:after
-        width: 0
+
   &__checkbox
-    width: 22px
-    height: 22px
-    border: 1px solid #EBEBEB
+    width: 18px
+    height: 19px
+    border: 1px solid #5A6DAA
     text-align: center
     cursor: pointer
     display: inline-block
     margin-right: 20px
     line-height: 21px
-    transition: border-color .3s ease
-    position: relative
-    &:after
-      content: ""
-      position: absolute
-      display: block
-      width: 100%
-      height: 100%
-      background-color: #fff
-      top: 0
-      right: 0
-      transition: width .3s ease-in-out
+    transition: background-color .3s ease
 
 // Sidebar tags block
 .sidebar-tags
@@ -338,20 +328,22 @@
   margin-bottom: 40px
   background-color: #f6f6f6
   &__title
-    color: #3f3f3f
-    font-size: 18px
+    color: #272727
+    font-size: 14px
+    text-transform: uppercase
     margin-bottom: 30px
   &__tags
     margin-bottom: 20px
   &__tag
-    font-size: 13px
-    color: #a4a4a4
+    font-family: "Open sans", sans-serif
+    font-size: 14px
+    color: #6d6d6d
     transition: color .3s ease, text-decoration .3s ease
     display: block
     margin: 10px 0
     text-decoration: none
     &:hover
-      color: #00ad5d
+      color: #4c68a5
       text-decoration: underline
   // show hidden tags
   &__hidden
@@ -374,7 +366,7 @@
   transition: color .3s ease, transform .3s ease
   &:hover, &:focus
     span
-      color: #00ad5d
+      color: #4c68a5
   & > *
     vertical-align: middle
   i
