--- a/resources/assets/sass/partials/_listing.sass
+++ b/resources/assets/sass/partials/_listing.sass
@@ -568,21 +568,21 @@
 
 // WishList
 .wishlist
-  width: 47px
-  height: 47px
-  box-shadow: 0px 0px 9px 0px rgba(0, 0, 2, 0.09)
-  border-radius: 50%
+  width: 27px
+  height: 25px
+  //box-shadow: 0px 0px 9px 0px rgba(0, 0, 2, 0.09)
+  //border-radius: 50%
   position: absolute
-  top: 10px
-  right: 10px
+  top: 16px
+  right: 40px
   cursor: pointer
   background-color: #ffffff
   transition: background-color .3s ease
   .icon-fade
-    padding: 15px 10px 7px 11px
-    i:last-child
-      top: 15px
-      left: 11px
+    //padding: 15px 10px 7px 11px
+    //i:last-child
+    //  top: 15px
+    //  left: 11px
   &:hover, &:focus
     background-color: #F8F8F8
   .sprite_main-product__wishlist_done
