--- a/resources/assets/sass/_sprite.scss
+++ b/resources/assets/sass/_sprite.scss
@@ -4,315 +4,333 @@
   display: inline-block;
 }
 
+
 .sprite-arrow-down-blue-min {
   width: 8px;
   height: 6px;
-  background-position: -10px -10px;
+  background-position: -5px -5px;
 }
 
 .sprite-arrow-down-blue2-min {
   width: 10px;
   height: 7px;
-  background-position: -38px -10px;
+  background-position: -23px -5px;
 }
 
 .sprite-arrow-down-min {
   width: 21px;
   height: 12px;
-  background-position: -68px -10px;
+  background-position: -43px -5px;
 }
 
 .sprite-arrow-dwn-min {
   width: 10px;
   height: 6px;
-  background-position: -109px -10px;
+  background-position: -74px -5px;
 }
 
 .sprite-arrow-l-blue-min {
   width: 13px;
   height: 10px;
-  background-position: -139px -10px;
+  background-position: -94px -5px;
 }
 
 .sprite-arrow-l-icon-min {
   width: 8px;
   height: 16px;
-  background-position: -172px -10px;
+  background-position: -117px -5px;
 }
 
 .sprite-arrow-left-blue-min {
   width: 12px;
   height: 21px;
-  background-position: -200px -10px;
+  background-position: -135px -5px;
 }
 
 .sprite-arrow-r-blue-min {
   width: 19px;
   height: 13px;
-  background-position: -232px -10px;
+  background-position: -157px -5px;
 }
 
 .sprite-arrow-r-icon-min {
   width: 8px;
   height: 16px;
-  background-position: -271px -10px;
+  background-position: -186px -5px;
 }
 
 .sprite-arrow-right-blue-min {
   width: 12px;
   height: 21px;
-  background-position: -299px -10px;
+  background-position: -204px -5px;
 }
 
 .sprite-arrow-top-min {
   width: 12px;
   height: 16px;
-  background-position: -10px -51px;
+  background-position: -226px -5px;
 }
 
 .sprite-arrow-up-blue-min {
   width: 10px;
   height: 7px;
-  background-position: -42px -51px;
+  background-position: -248px -5px;
 }
 
 .sprite-arrow-up-min {
   width: 20px;
   height: 12px;
-  background-position: -72px -46px;
+  background-position: -268px -5px;
 }
 
 .sprite-burg-min {
   width: 20px;
   height: 15px;
-  background-position: -112px -46px;
+  background-position: -5px -27px;
 }
 
 .sprite-cart-icon-min {
   width: 32px;
   height: 32px;
-  background-position: -232px -46px;
+  background-position: -35px -27px;
 }
 
 .sprite-cart-icon-white-min {
   width: 24px;
   height: 24px;
-  background-position: -152px -51px;
+  background-position: -77px -27px;
 }
 
 .sprite-checkbox-pen-min {
   width: 31px;
   height: 31px;
-  background-position: -284px -51px;
+  background-position: -248px -27px;
 }
 
 .sprite-checked-symbol-min {
   width: 59px;
   height: 59px;
-  background-position: -10px -98px;
+  background-position: -77px -68px;
 }
 
 .sprite-comment-bubble-min {
   width: 36px;
   height: 32px;
-  background-position: -89px -98px;
+  background-position: -146px -68px;
 }
 
 .sprite-cross-blue-min {
   width: 12px;
   height: 12px;
-  background-position: -196px -51px;
+  background-position: -5px -68px;
 }
 
 .sprite-cross-red-min {
   width: 10px;
   height: 10px;
-  background-position: -145px -102px;
+  background-position: -192px -68px;
 }
 
 .sprite-delivery-icon-min {
   width: 44px;
   height: 26px;
-  background-position: -175px -102px;
+  background-position: -212px -68px;
 }
 
 .sprite-favorite-heart-active {
   width: 27px;
   height: 25px;
-  background-position: -239px -102px;
+  background-position: -266px -68px;
 }
 
 .sprite-favorite-heart-min {
   width: 27px;
   height: 25px;
-  background-position: -286px -102px;
+  background-position: -5px -103px;
 }
 
 .sprite-favorite-icon-min {
   width: 17px;
   height: 14px;
-  background-position: -239px -147px;
+  background-position: -42px -103px;
 }
 
 .sprite-home-icon-min {
   width: 18px;
   height: 16px;
-  background-position: -276px -147px;
+  background-position: -266px -103px;
 }
 
 .sprite-icon-eye-min {
   width: 22px;
   height: 11px;
-  background-position: -10px -183px;
+  background-position: -42px -129px;
 }
 
 .sprite-information-symbol-min {
   width: 9px;
   height: 31px;
-  background-position: -52px -183px;
+  background-position: -146px -129px;
 }
 
 .sprite-instagram-icon-min {
   width: 36px;
   height: 35px;
-  background-position: -81px -183px;
+  background-position: -192px -104px;
 }
 
 .sprite-laundry-min {
   width: 28px;
   height: 30px;
-  background-position: -137px -183px;
+  background-position: -238px -129px;
 }
 
 .sprite-listing__filter {
   width: 19px;
   height: 18px;
-  background-position: -185px -183px;
+  background-position: -276px -129px;
 }
 
 .sprite-locate-places-min {
   width: 18px;
   height: 26px;
-  background-position: -224px -183px;
+  background-position: -5px -157px;
 }
 
 .sprite-money-tool-min {
   width: 27px;
   height: 31px;
-  background-position: -262px -183px;
+  background-position: -33px -169px;
 }
 
 .sprite-outline-min {
   width: 51px;
   height: 22px;
-  background-position: -10px -234px;
+  background-position: -70px -157px;
 }
 
 .sprite-phone-icon-min {
   width: 13px;
   height: 13px;
-  background-position: -137px -234px;
+  background-position: -165px -129px;
 }
 
 .sprite-phone-icon-white-min {
   width: 25px;
   height: 25px;
-  background-position: -170px -234px;
+  background-position: -165px -169px;
 }
 
 .sprite-play-button-min {
   width: 66px;
   height: 66px;
-  background-position: -215px -234px;
+  background-position: -200px -169px;
+}
+
+.sprite-product__basket_done {
+  width: 26px;
+  height: 19px;
+  background-position: -5px -245px;
+}
+
+.sprite-product__old-price {
+  width: 90px;
+  height: 29px;
+  background-position: -41px -245px;
+}
+
+.sprite-sale {
+  width: 122px;
+  height: 122px;
+  background-position: -305px -5px;
 }
 
 .sprite-search-icon-min {
   width: 17px;
   height: 17px;
-  background-position: -301px -234px;
+  background-position: -305px -137px;
 }
 
 .sprite-star-blue-min {
   width: 16px;
   height: 16px;
-  background-position: -81px -271px;
+  background-position: -332px -137px;
 }
 
 .sprite-star-min {
   width: 26px;
   height: 26px;
-  background-position: -335px -10px;
+  background-position: -358px -137px;
 }
 
 .sprite-star-white-min {
   width: 16px;
   height: 16px;
-  background-position: -335px -56px;
+  background-position: -394px -137px;
 }
 
 .sprite-thermometer-min {
   width: 20px;
   height: 34px;
-  background-position: -335px -92px;
+  background-position: -394px -163px;
 }
 
 .sprite-thumbs-up-hand-symbol-min {
   width: 29px;
   height: 29px;
-  background-position: -333px -146px;
+  background-position: -141px -207px;
 }
 
 .sprite-tick-icon-blue-min {
   width: 21px;
   height: 19px;
-  background-position: -309px -195px;
+  background-position: -70px -207px;
 }
 
 .sprite-trigon-l-min {
   width: 10px;
   height: 13px;
-  background-position: -145px -146px;
+  background-position: -276px -163px;
 }
 
 .sprite-trigon-r-blue-min {
   width: 10px;
   height: 12px;
-  background-position: -350px -195px;
+  background-position: -332px -163px;
 }
 
 .sprite-trigon-r-min {
   width: 10px;
   height: 13px;
-  background-position: -350px -227px;
+  background-position: -5px -207px;
 }
 
 .sprite-trigon-white-min {
   width: 52px;
   height: 61px;
-  background-position: -301px -271px;
+  background-position: -276px -207px;
 }
 
 .sprite-twitter-icon-min {
   width: 34px;
   height: 34px;
-  background-position: -381px -10px;
+  background-position: -338px -207px;
 }
 
 .sprite-video-player-min {
   width: 29px;
   height: 23px;
-  background-position: -375px -64px;
+  background-position: -101px -207px;
 }
 
 .sprite-vk-icon-min {
   width: 33px;
   height: 33px;
-  background-position: -382px -107px;
+  background-position: -382px -207px;
 }
 
 .sprite-youtube-logo-min {
   width: 75px;
   height: 61px;
-  background-position: -10px -352px;
+  background-position: -141px -251px;
 }
-
