--- a/resources/assets/sass/partials/_listing.sass
+++ b/resources/assets/sass/partials/_listing.sass
@@ -34,7 +34,7 @@
     +col-lg(8)
     text-align: center
     span
-      color: #00ad5d
+      color: #4c68a5
   &__listing-link
     &.sm
       text-align: center
@@ -47,12 +47,12 @@
     +col-md(8)
     font-size: 16px
     font-weight: 700
-    color: #00ad5d
+    color: #4c68a5
     text-align: right
     text-decoration: none
     transition: color .3s ease
     &:hover, &:focus
-      color: #076a3c
+      color: #2d4f7e
 
 // Related articles list
 .articles
@@ -109,30 +109,18 @@
     margin-top: auto
     text-transform: uppercase
     font-size: 13px
-    border: 2px solid #c6c6c6
+    border: 2px solid #4c68a5
     text-decoration: none
-    color: #171620
-    font-weight: 900
+    color: #4c68a5
+    font-weight: 400
     display: inline-block
     padding: 10px 15px
     +media-lg(up)
       width: 50%
     transition: border-color .3s ease
     &:hover, &:focus
-      border-color: #909090
-
-// Subscription
-//.Прямоугольник_1 {
-//  border-width: 3px;
-//  border-color: rgb(61, 102, 171);
-//  border-style: solid;
-//  position: absolute;
-//  left: 769px;
-//  top: 2670px;
-//  width: 814px;
-//  height: 494px;
-//  z-index: 17;
-//}
+      color: #2d4f7e
+      border-color: #2d4f7e
 
 .colored-bg__f3f2f2
     background-color: #f3f2f2
